Migrate scalino-linkdriver from GraalVM native-image to Scala Native
My previous attempts were telling the AI to selfhost on Scala Native
which were interpreted by the AI to link scalino-linkdriver as a Scala Native
binary linked using scalino itself. This is a nice goal to have, but
my actual humbler goal was to get rid of GraalVM native-image and have
the entire toolchain built using Scala Native. Now that I finished my
weekly AI budget I needed to get my hands dirty and edit the AI generated
scripts. So now I generate the binaries using the normal Scala Native toolchain
on the JVM. In the future it would be interesting to migrate the ugly
shell scripts into something more maintainable based on sbt or an equivalent
build tool.